force-app/main/default/objects/Service_Line_Item__c/Service_Line_Item__c.object-meta.xml
<CustomObject>
    <description>This is the child object holding individual services/parts within one Service_Request</description>
    <label>Service Line Item</label>
    <nameField>
        <displayFormat>SLI-{00000}</displayFormat>
        <label>Service Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>