force-app/main/default/objects/Service_Line_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The specific service or part from the catalog being added to this service request.</description>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Service Line Items</relationshipLabel>
    <relationshipName>Service_Line_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>