force-app/main/default/objects/Service_Line_Item__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <label>Service Request</label>
    <referenceTo>Service_Request_New__c</referenceTo>
    <relationshipLabel>Service Line Items</relationshipLabel>
    <relationshipName>Service_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>