force-app/main/default/objects/Service_Line_Item__c/fields/Unit_Rate__c.field-meta.xml
<CustomField>
    <fullName>Unit_Rate__c</fullName>
    <description>The price per unit for this service or part, automatically populated from the active price book at the time of entry.</description>
    <label>Unit Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>