force-app/main/default/objects/Service_Line_Item__c/validationRules/Quantity_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_must_be_positive</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c  &lt;= 0</errorConditionFormula>
    <errorMessage>Quantity must be greater than zero</errorMessage>
</ValidationRule>